testsuite/poke.pkl/promo-array-arg-diag-5.pk
/* { dg-do compile } */

defun foo = (int[3][2] a) int: { return a[1][1]; }
foo ([[1,2],[3,4]]); /* { dg-error "" } */
